// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hide reply button 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders body only 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": null,
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": null,
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders disabled reply when commenting has been disabled 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": true,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={true}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders disabled reply when story is closed 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={true}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": true,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders in reply to 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName="ParentAuthor"
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": Object {
                  "author": Object {
                    "username": "ParentAuthor",
                  },
                },
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`renders username and body 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;

exports[`shows conversation link 1`] = `
<div
  data-testid="comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <ForwardRef(forwardRef)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                readOnly={false}
                settings={
                  Object {
                    "disableCommenting": Object {
                      "enabled": false,
                    },
                  }
                }
                viewer={null}
              />
              <ReplyButton
                active={false}
                disabled={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainer)
                commentID="comment-id"
                story={
                  Object {
                    "isClosed": false,
                    "url": "http://localhost/story",
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "lastViewerAction": null,
                    "parent": null,
                    "pending": false,
                    "status": "NONE",
                    "tags": Array [],
                  }
                }
                viewer={null}
              />
            </ButtonsBar>
          </ForwardRef(forwardRef)>
          <ShowConversationLink
            href="http://localhost/story?commentID=comment-id"
            id="comments-commentContainer-showConversation-comment-id"
            onClick={[Function]}
          />
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      topBarRight={
        <ForwardRef(forwardRef)
          alignItems="center"
          itemGutter={true}
        >
          <React.Fragment />
        </ForwardRef(forwardRef)>
      }
      username={
        <React.Fragment>
          <Relay(UsernameWithPopoverContainer)
            user={
              Object {
                "id": "author-id",
                "username": "Marvin",
              }
            }
            viewer={null}
          />
          <Relay(UserTagsContainer)
            comment={
              Object {
                "author": Object {
                  "id": "author-id",
                  "username": "Marvin",
                },
                "body": "Woof",
                "createdAt": "1995-12-17T03:24:00.000Z",
                "editing": Object {
                  "editableUntil": "1995-12-17T03:24:30.000Z",
                  "edited": false,
                },
                "id": "comment-id",
                "lastViewerAction": null,
                "parent": null,
                "pending": false,
                "status": "NONE",
                "tags": Array [],
              }
            }
          />
        </React.Fragment>
      }
    />
  </ForwardRef(forwardRef)>
</div>
`;
